# django-messenger

./: pyproject.toml
Messenger/: asgi.py  settings.py  urls.py  wsgi.py
chat/: consumer.py  models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
frontend/: app.js  index.html
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_profile.py  0003_profile_display_name.py
